static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
/*font-family: 'Roboto', sans-serif;*/
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
/*font-family: 'Open Sans', sans-serif;*/
/*@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');*/
/*font-family: 'Oswald', sans-serif;*/

/*
Colours:
  Main Brand Colour (Sap Green)  : #3F7D20 : rgb(63,125,32)
  Accent Colour (Plum purple)    : #8E4585 : rgb(142,69,133)
  Background Colour (Honeydew)   : #F3FCF0 : rgb(243,252,240)
  Main text colour (Rich Black)  : #0D0A0B : rgb(13,10,11)
*/
/*
 * Global styles
 */
body, html {
  background-color: #F3FCF0;
  color: #0D0A0B;
  font-family: 'Roboto', sans-serif;
}
 /*Forces body to full height so footer can be positioned to bottom*/
body {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}
main {
  display: flex;
  flex: 1 0 auto;
  flex-flow: column nowrap;
}
/* Ensures there's a little space between the content and the header and footer.
   Scales to screen size so small screens don't have a lot of wasted space. */
.vpad {
  margin-top: 5vh;
  margin-bottom: 5vh;
}
h1, h2, h3, h4, h5, h6 {
  color: #0D0A0B;
  font-family: 'Open Sans', sans-serif;
}
hr.section-divider {
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(142,69,133,0), rgba(142,69,133,1), rgba(142,69,133,0));
}
.section-header {
  color: #3F7D20;
}
.btn-small,
.btn-large,
.btn-small:focus,
.btn-large:focus {
  color: #F3FCF0;
  background-color: #3F7D20;
}
.btn-small:hover,
.btn-large:hover {
  background-color: #63A344;
}
.btn-plum,
.btn-plum:focus {
  color: #F3FCF0;
  background-color: #8E4585;
}
.btn-plum:hover {
  background-color: #9F54B0;
}
/*
 * Header and Navigation
 */
.brand-icon {
  width: 50px;
  height: 50px;
  background-image: url("../images/plum.svg");
  background-repeat: no-repeat;
  background-position: center;
}
.brand-title {
  color: #3F7D20;
  padding: 0;
  margin: 0;
}
nav .nav-wrapper {
  background-color: #F3FCF0;
  color: #3F7D20;
  border-bottom: solid 2px #8E4585; /*#3F7D20;*/
  font-family: 'Open Sans', sans-serif;
}
nav ul li a {
  color: #3F7D20;
}
.user-dropdown {
  background-color: #F3FCF0;
}
ul.user-dropdown li > a {
  color: #3F7D20;
}
.sidenav-trigger {
  color: #3F7D20;
}
.sidenav {
  background-color: #F3FCF0;
  font-family: 'Open Sans', sans-serif;
}
.sidenav .collapsible-header,
.sidenav .collapsible-body {
  padding: 0 32px;
  background-color: transparent;
}
/*
 * Recipe cards
 */
.card {
  background-color: #F3FCF0;
}
.card .card-content {
  padding: 10px;
}
.card-title {
  color: #3F7D20;
  font-family: 'Open Sans', sans-serif;
}
/*The following styles force card and recipe header images to be square and have
  their final size on load. This prevents layout changes as images load in.*/
.card .card-image,
.card-panel.card-image,
.col.recipe-header-img {
  position: relative;
  padding: 0;
}
.card .card-image::after,
.card-panel.card-image::after,
.col.recipe-header-img::after {
  content: "";
  display: block;
  padding-bottom: 100%;
}
.card .card-image img,
.card-panel.card-image > img,
.recipe-header-img > img {
  position: absolute;
  width: 100%;
  height: 100%;
  object-fit: cover;
  background-color: #8E4585;
}
/*Makes the card-title only 2 lines high and hides any overflow*/
.card-title {
  position: relative;
  line-height: 1em;
  height: 2.8em;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 20px;
  color: #8E4585;
}
/* Shows any hidden title text on hover */
.card-title:hover {
  overflow: visible;
}
.card-title:hover::after {
  content: attr(data-expand);
  position: absolute;
  background-color: #F3FCF0;
  overflow: visible;
  top: 0;
  left: 0;
}
/*
 * Icons tiles
 */
.item-tile {
  box-shadow: 1px 1px 5px #0D0A0B;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
}
.tile-image {
  position: relative;
  object-fit: cover;
  height: 100%;
  width: 100%;
}
/* Adds a dark gradient to the bottom of the
   icon to make the title easier to read */
.tile-overlay {
  position: absolute;
  top: 25%;
  left: 0;
  width: 100%;
  height: 75%;
  background-image: linear-gradient(rgba(13,10,11,0.0), #0D0A0B);
}
.tile-title {
  position: absolute;
  left: 0;
  bottom: 0;
  right: 0;
  padding: 10px;
  white-space: normal;
}
/*
 * Recipe page
 */
.recipe-header {
  background-color: rgba(63,125,32,0.15);
}
.recipe-title {
  color: #8E4585;
  margin: 20px 0;
  /* Makes the title respond to viewport width to fill the space
     better while preventing it from getting too big or small */
  font-size: calc(20px + 2vw);
  text-align: center;
}
.recipe-author {
  color: #3F7D20;
  text-align: center;
}
.recipe-author a {
  color: #8E4585;
}
.recipe-author a:hover {
  color: #9F54B0;
}
.recipe-rating {
  margin: 10px 0;
  color: darkorange;
  text-align: center;
}
.recipe-rating .star i {
  font-size: 35px;
}
.recipe-header-sub {
  color: #3F7D20;
  text-align: center;
}
.recipe-header-sub div:not(:last-child) {
  border-right: 1px solid #3F7D20;
}
.recipe-header-sub p i {
  color: #3F7D20;
  font-size: 50px;
}
.recipe-header-sub span {
  font-size: calc(20px + 0.5vw);
}
.recipe-description {}
.recipe-rating-form .star i {
  font-size: 3em;
}
#recipe_comment_form {
  position: relative;
}
#recipe_comment_form .preloader-wrapper {
  position: absolute;
  top :0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: auto;
}
/* Styles materialize tabs */
.recipe-tabs .tab a {
  color: rgba(63,125,32,0.7);
}
.recipe-tabs .tab a:hover {
  font-weight: bold;
  color: #3F7D20;
}
.recipe-tabs .tab a.active,
.recipe-tabs .tab a:focus.active {
  color: #3F7D20;
  font-weight: bold;
  background-color: white;
}
.recipe-tabs .indicator {
  background-color: #8E4585;
}
/* Removes ordered list numbering so custom numbers can be displayed. */
ol.collection {
  list-style: none;
  counter-reset: list-counter;
  padding: 0;
}
ol.collection li.collection-item {
  counter-increment: list-counter;
  font-size: 1rem;
  padding-left: 50px;
  color: #0D0A0B;
}
/* Adds custom styled list numbers before the HTML content. */
ol.collection li.collection-item::before {
  content: counter(list-counter);
  text-align: center;
  color: #8E4585;
  position: absolute;
  left: 10px;
  margin-top: -5px;
  line-height: 30px;
  background-color: white;
  border: 1px solid #8E4585;
  border-radius: 50%;
  height: 30px;
  width: 30px;
}
/* Gives a highlight effect on a selected step so the user can highlight
   the current step they're following. */
ol.collection li.collection-item:hover,
ol.collection input:checked + label li.collection-item {
  background-color: rgba(63,125,32,0.15);
}
ol.collection input:checked + label li.collection-item::before
{
  color: #F3FCF0;
  background-color: #8E4585;
}
/*
 * Recipe toolbar and favorite element
 */
#recipe_toolbar {
  position: absolute;
  margin: 5px;
}
#recipe_favorite_form {
  display: inline-block;
}
#recipe_favorite > input[type="checkbox"] ~ .material-icons::after {
  content: "favorite_border";
}
#recipe_favorite > input[type="checkbox"]:checked ~ .material-icons::after {
  content: "favorite";
}
/*
 * Add/Edit recipe page
 */
input#recipe_image {
  background-color: rgba(243,252,240,0.9);
}
#steps .collection-item,
#ingredients .collection-item {
  position: relative;
}
.remove-list-item {
  position: absolute;
  top: 0;
  right: 0;
  width: 25px;
  height: 25px;
  background-color: transparent;
  color: #0D0A0B;
  cursor: pointer;
}
.remove-list-item:hover {
  background-color: #8E4585;
  color: #F3FCF0;
}
/*
 * Search page
 */
.search-col {
  padding:0;
}
.search-tile {
  position: relative;
  width: 175px;
  height: 175px;
  background-color: #8E4585;
  margin: 10px auto;
}
.search-tile .tile-title {
  color: #F3FCF0;
  font-size: 20px;
}
.search-tile .item-tile {
  cursor: pointer;
}
/*
 * User profile page
 */
.recipe-tile {
  position: relative;
  height: 200px;
  width: 200px;
}
.recipe-tile .tile-title {
  color: #F3FCF0;
  font-size: 20px;
}
/*
 * Login page
 */
/*Makes the login box centred vertically.*/
.login-wrapper {
  display: flex;
  flex-flow: column nowrap;
  flex: 1;
}
.login-wrapper > .valign-wrapper {
  flex: 1;
}
.login-box {
  max-width: 750px;
}
.login-header {
  background-color: #F3FCF0;
  color: #3F7D20;
}
li:not(.active) > .login-header {
  border-bottom: 2px solid #8E4585;
  /* Delays the application of this rule on collapse so the border appears
     as the content dissapears for a seemless transition. */
  transition-delay: 0.3s;
}
.login-body {
  border-bottom: 2px solid #8E4585;
}
/*
 * Footer
 */
footer {
  background-color: #3F7D20;
  color: #F3FCF0;
}
/*
 * Custom controls
 */
/*
 * Star rating
 */
/* Makes the star rating horizontal */
.star-rating,
.star-rating-ctl {
  display: inline-block;
  list-style-type: none;
  margin: 0;
  padding: 0;
}
.star-rating > .rating-text,
.star-rating > .star {
  float: left;
  white-space: nowrap;
}
/* In order for CSS hover and checked styles to apply to the correct stars
   the order has to be visually reversed as the ~ sibling selector only works
   forwards, but we need it to work backwards. */
.star-rating-ctl > .star {
  float: right;
}
.star i,
.rating-text {
  color: #8E4585;
}
/* Makes unchecked stars display an empty star icon */
.star-rating > .star.off i::after,
.star-rating-ctl > .star i::after {
  content: "star_border";
}
/* Stars set to half show a half filled star */
.star-rating > .star.half i::after {
  content: "star_half";
}
/* Shows a fully checked star if a star is set on, or when a star is hovered,
  a following sibling is hovered or a following checkbox is checked */
.star-rating > .star.on i::after,
.star-rating-ctl > .star:hover > i::after,
.star-rating-ctl > .star:hover ~ .star > i::after,
.star-rating-ctl:not(:hover) > input[type="radio"]:checked ~ .star > i::after {
  content: "star";
}
/* Prevents the star control recieving hover events if it's set to disabled */
.star-rating-ctl.disabled,
.star-rating-ctl.disabled .star {
  pointer-events: none;
  opacity: 0.75;
}
/*
 * Horizontal item scroller
 */
.scroller,
.col.scroller {
  position: relative;
  overflow: hidden;
  padding: 0 25px;
}
/* overflow set to scroll allowing touch scrolling,
   but with scrollbars hidden */
ul.scroller-items {
  list-style-type: none;
  overflow: scroll;
  white-space: nowrap;
  font-size: 0;
  padding: 0;
  /* Removes scrollbars in firefox */
  scrollbar-width: none;
  /* Removes scrollbars in IE 10+ */
  -ms-overflow-style: none;
}
/* Removes scrollbars in webkit browsers */
ul.scroller-items::-webkit-scrollbar {
  display: none;
}
li.scroll-item {
  font-size: 1rem;
  display: inline-block;
  text-align: center;
  padding: 10px;
}
.scroll-item-bookend {
  font-size: 1rem;
  display: inline-block;
  text-align: center;
  height: 100%;
  width: 25px;
}
.scroller .scroll-left {
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
}
.scroller .scroll-right {
  position: absolute;
  top: 50%;
  right: 0;
  transform: translateY(-50%);
}
/*
 * Media Queries
 */
/* Stops recipe tiles getting larger than the scroller bounds,
   which leads to some problems with scrolling */
@media only screen and (max-width: 360px) {
  .recipe-tile {
    height: 150px;
    width: 150px;
  }
}
/* Large screens and up */
@media only screen and (min-width: 992px) {
  /* Makes header content vertically centred when header
     image and text are side-by side */
  .recipe-header {
      display: flex;
      align-items: center;
  }
  /* prevents overflowing header when image
     and title are side by side */
  .recipe-header-sub {
    margin: 0;
  }
}

